Update AggregateStatsDirective.java